attic/old_tests/xml/invalidxml/obsBlock/emptyobsdata.xml.README
emptyobadata.xml: BAD no data in obsData blcok
